# raft-kv-rs

./: .gitignore  Cargo.toml  DockerFile  docker-compose.yml  toxiproxy.json
examples/: raft_example.rs  raft_server_example.rs  test_client.rs  test_http_server.rs  test_server.rs  test_shutdown.rs  tokio_interval_example.rs
proto/: raft.proto
src/: fsm.rs  grpc_server.rs  http_server.rs  lib.rs  raft.rs  raft_server.rs
src/core/: candidate_state.rs  error.rs  follower_state.rs  leader_state.rs  mod.rs  node_status.rs
tests/: elect_test.rs  test_group.rs
