[package]
name = "raft-kv-rs"
version = "0.1.0"
edition = "2021"

[[bin]] # Bin to run the raft server
name = "raft-server"
path = "src/bin/server.rs"

[[bin]] # Bin to run the  client
name = "raft-client"
path = "src/bin/client.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tonic = "0.12.3"
prost = "0.13"
log = "0.4.22"
env_logger = "0.11.5"
bytes = "*"
clap = { version = "4.5.23", features = ["derive"] }
rand = "*"
chrono = "0.4.39"

[build-dependencies]
tonic-build = "0.12.3"